--- a/testLoadImg.html
+++ b/testLoadImg.html
@@ -1,69 +1,75 @@
 <!DOCTYPE html>
 <html>
 
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-	</head>
+<head>
+    <meta charset="UTF-8">
+    <title></title>
+</head>
 
-	<body>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-		<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304' /></p>
-	</body>
-	<script src="ec-do.js"></script>
-	<script>
-		window.onload = function() {
-			ecDo.loadImg('load-img',100);
-			window.onscroll = function() {
-				ecDo.loadImg('load-img',100);
-			}
-		}
-	</script>
+<body>
+<p><img data-src="lawyerOtherImg1.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+<p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
+</body>
+<script src="ec-do.js"></script>
+<script>
+    window.onload = function () {
+        ecDo.loadImg('load-img', 100, 'error.jpg');
+        window.onscroll = function () {
+            ecDo.loadImg('load-img', 100, 'error.jpg');
+        }
+    }
+//    window.onload = function () {
+//        ecDo.loadImg('load-img', 100);
+//        window.onscroll = function () {
+//            ecDo.loadImg('load-img', 100);
+//        }
+//    }
+</script>
 
 </html>
