--- a/html.html
+++ b/html.html
@@ -18,13 +18,15 @@
 		<div class="div1"></div>
 		<div class="div1"></div>
 	</body>
-	<script src="ec-do.js"></script>
+	<script src="dist/ec-do-2.0.0.js"></script>
 <script type="text/javascript">
 	window.onload=function () {
-		var oDiv=document.getElementById("div1");
+        //import {ecDo} from './dist/ec-do-2.0.0';
+
+		let oDiv=document.getElementById("div1");
 		ecDo.show(oDiv);
         ecDo.text(oDiv,'<div id="div1">45132134656</div>');
-        var odiv2=ecDo.siblings(oDiv,'#div2')
+        let odiv2=ecDo.siblings(oDiv,'#div2')
         ecDo.css(odiv2[0],{'height':'300px','width':'300px','background':'#ccc'})
 
     }
