--- a/html.html
+++ b/html.html
@@ -18,11 +18,10 @@
 		<div class="div1"></div>
 		<div class="div1"></div>
 	</body>
-	<script src="dist/ec-do-2.0.0.js"></script>
+<script src="./dist/ec-do-2.0.0.js"></script>
 <script type="text/javascript">
 	window.onload=function () {
-        //import {ecDo} from './dist/ec-do-2.0.0';
-
+        //let ecDo =require('./dist/ec-do-2.0.0.js');
 		let oDiv=document.getElementById("div1");
 		ecDo.show(oDiv);
         ecDo.text(oDiv,'<div id="div1">45132134656</div>');
