--- a/testLoadImg.html
+++ b/testLoadImg.html
@@ -56,7 +56,7 @@
 <p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
 <p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
 </body>
-<script src="ec-do.js"></script>
+<script src="dist/ec-do-2.0.0.js"></script>
 <script>
     window.onload = function () {
         ecDo.loadImg('load-img', 100, 'error.jpg');
