--- a/html.html
+++ b/html.html
@@ -18,7 +18,7 @@
 		<div class="div1"></div>
 		<div class="div1"></div>
 	</body>
-<script src="ec-do-1.1.4.js"></script>
+<script src="src/ec-do-1.1.4.js"></script>
 <script type="text/javascript">
 	window.onload=function () {
         let oDiv1 =document.querySelectorAll("div");
