--- a/html.html
+++ b/html.html
@@ -17,7 +17,7 @@
 		<div class="div1"></div>
 		<div class="div1"></div>
 	</body>
-<script src="src/ec-do-3.0.0.js"></script>
+<script src="src/ec-do-3.0.0-beta.1.js"></script>
 <script type="text/javascript">
 	window.onload=function () {
         let oDiv1 =document.querySelectorAll(".div1");
@@ -34,6 +34,13 @@
         console.log(ecDo.encryptStr('18819266335',[5],0,'-'));
 
         console.log(ecDo.encryptStr('18819322663',[3,5,3],0));
+
+        console.log(ecDo.checkType.check('188170239','phone'));
+        ecDo.checkType.addRule('money',function (str) {
+            return /^[0-9]+(.[0-9]{2})?$/.test(str)
+        });
+        console.log(ecDo.checkType.check('18.36','money'));
+
     }
 </script>
 </html>
