--- a/html.html
+++ b/html.html
@@ -20,26 +20,32 @@
 <script src="src/ec-do-3.0.0-beta.1.js"></script>
 <script type="text/javascript">
 	window.onload=function () {
-        let oDiv1 =document.querySelectorAll(".div1");
-        let oDiv3=document.querySelector("#div1");
-        ecDo.css(oDiv3,{'height':'100px','width':'100px','background':'#333'});
-        ecDo.css(oDiv1,{'height':'100px','width':'100px','background':'#09f'});
-        //let ecDo =require('./dist/ec-do-2.0.0.js');
-		let oDiv=document.getElementById("div1");
-		ecDo.show(oDiv);
-        ecDo.text(oDiv,'<div id="div1">45132134656</div>');
-        let oDiv2=ecDo.siblings(oDiv,'#div2')
-        ecDo.css(oDiv2[0],{'height':'300px','width':'300px','background':'#ccc'})
+//        let oDiv1 =document.querySelectorAll(".div1");
+//        let oDiv3=document.querySelector("#div1");
+//        ecDo.css(oDiv3,{'height':'100px','width':'100px','background':'#333'});
+//        ecDo.css(oDiv1,{'height':'100px','width':'100px','background':'#09f'});
+//        //let ecDo =require('./dist/ec-do-2.0.0.js');
+//		let oDiv=document.getElementById("div1");
+//		ecDo.show(oDiv);
+//        ecDo.text(oDiv,'<div id="div1">45132134656</div>');
+//        let oDiv2=ecDo.siblings(oDiv,'#div2')
+//        ecDo.css(oDiv2[0],{'height':'300px','width':'300px','background':'#ccc'})
+//
+        console.log(ecDo.encryptStr('18819322663','3,7','-'));
 
-        console.log(ecDo.encryptStr('18819266335',[5],0,'-'));
+        console.log(ecDo.unEncryptStr('18819322663','3,7','-'));
 
-        console.log(ecDo.encryptStr('18819322663',[3,5,3],0));
+        console.log(ecDo.encryptStartStr('18819322663','3','+'));
+        console.log(ecDo.encryptEndStr('18819322663','3','+'));
 
-        console.log(ecDo.checkType.check('188170239','phone'));
-        ecDo.checkType.addRule('money',function (str) {
-            return /^[0-9]+(.[0-9]{2})?$/.test(str)
-        });
-        console.log(ecDo.checkType.check('18.36','money'));
+//        console.log(ecDo.checkType.check('188170239','phone'));
+//        ecDo.checkType.addRule('money',function (str) {
+//            return /^[0-9]+(.[0-9]{2})?$/.test(str)
+//        });
+//        console.log(ecDo.checkType.check('18.36','money'));
+
+
+
 
     }
 </script>
