--- a/html.html
+++ b/html.html
@@ -38,12 +38,14 @@
 //        console.log(ecDo.encryptStartStr('18819322663','3','+'));
 //        console.log(ecDo.encryptEndStr('18819322663','3','+'));
 
-        console.log(ecDo.filterStr.addType('chinese',function (str,replaceStr='') {
-            return str.replace(/[\u4E00-\u9FA5]/g, replaceStr);
-        }));
-        console.log(ecDo.filterStr.handle('specialStr','asdasd46撒打算的','.',''));
-        console.log(ecDo.filterStr.handle('specialStr','asdasd46465--+*//6','...','//+'));
+//        console.log(ecDo.filterStr.addType('chinese',function (str,replaceStr='') {
+//            return str.replace(/[\u4E00-\u9FA5]/g, replaceStr);
+//        }));
+//        console.log(ecDo.filterStr.handle('specialStr','asdasd46撒打算的','.',''));
+//        console.log(ecDo.filterStr.handle('specialStr','asdasd46465--+*//6','...','//+'));
 
+
+        console.log(ecDo.formatDate(1526972830319,'yy-M-d h:m:s'));
 //        console.log(ecDo.checkType.check('188170239','phone'));
 //        ecDo.checkType.addRule('money',function (str) {
 //            return /^[0-9]+(.[0-9]{2})?$/.test(str)
