--- a/html.html
+++ b/html.html
@@ -38,10 +38,10 @@
 //        console.log(ecDo.encryptStartStr('18819322663','3','+'));
 //        console.log(ecDo.encryptEndStr('18819322663','3','+'));
 
-//        console.log(ecDo.filterStr.addType('chinese',function (str,replaceStr='') {
-//            return str.replace(/[\u4E00-\u9FA5]/g, replaceStr);
-//        }));
-//        console.log(ecDo.filterStr.handle('specialStr','asdasd46撒打算的','.',''));
+        ecDo.filterStr.addType('chinese',function (str,replaceStr='') {
+            return str.replace(/[\u4E00-\u9FA5]/g, replaceStr);
+        });
+        console.log(ecDo.filterStr.handle('chinese','asdasd46撒打算的','.',''));
 //        console.log(ecDo.filterStr.handle('specialStr','asdasd46465--+*//6','...','//+'));
 
 
