增加测试用例

--- a/testCase/loadImg.html
+++ b/testCase/loadImg.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body><!DOCTYPE html>
 <html>
 
 <head>
@@ -56,7 +62,7 @@
 <p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
 <p><img data-src="lawyerOtherImg.jpg" class="load-img" width='528' height='304'/></p>
 </body>
-<script src="dist/ec-do-2.0.0.js"></script>
+<script src="../src/ec-do-3.0.0-beta.1.js"></script>
 <script>
     window.onload = function () {
         ecDo.loadImg('load-img', 100, 'error.jpg');
@@ -64,12 +70,9 @@
             ecDo.loadImg('load-img', 100, 'error.jpg');
         }
     }
-//    window.onload = function () {
-//        ecDo.loadImg('load-img', 100);
-//        window.onscroll = function () {
-//            ecDo.loadImg('load-img', 100);
-//        }
-//    }
 </script>
 
+</html>
+
+</body>
 </html>
