完善文档和测试用例

--- a/example/encrypt.html
+++ b/example/encrypt.html
@@ -9,8 +9,8 @@
 <script>
     console.log(`加密字符|${ecDo.encryptStr('18819233362','3,7','+')}|`)
     console.log(`不加密字符|${ecDo.encryptUnStr('18819233362','3,7','+')}|`)
-    console.log(`加密开始|${ecDo.encryptStartStr('18819233362','4',)}|`)
-    console.log(`加密结束|${ecDo.encryptEndStr('18819233362','4',)}|`)
+    console.log(`加密开始|${ecDo.encryptStartStr('18819233362','4')}|`)
+    console.log(`加密结束|${ecDo.encryptEndStr('18819233362','4')}|`)
 </script>
 </body>
 </html>
