--- a/example/filterStr.html
+++ b/example/filterStr.html
@@ -18,6 +18,7 @@
     console.log(ecDo.filterWordLower('asdasdWECASasd'));
     console.log(ecDo.filterNumber('asdasd67w9e41z5xc'));
     console.log(ecDo.filterChinese('8963325asd阿斯达所多1'));
+    console.log(ecDo.filterEmjoy('\u2014 asdasdWECASasd'));
 </script>
 </body>
 </html>
