--- a/example/checkPwdLevel.html
+++ b/example/checkPwdLevel.html
@@ -7,7 +7,7 @@
 <body>
 <script src="../src/ec-do-3.0.0-beta.1.js"></script>
 <script>
-    console.log(ecDo.checkPwdLevel('asd188AS19663362'));
+    console.log(ecDo.checkPwdLevel('asd188AS19663362_.'));
 </script>
 </body>
 </html>
