--- a/example/validateForm.html
+++ b/example/validateForm.html
@@ -10,70 +10,68 @@
     let testData = {
         name: 'aaa',
         phone: '18819622663Z@qq.com',
-        pw: 'asda'
+        pw: 'asd9962213a'
     }
     //校验函数调用
-    ecDo.validateForm.check([
-        {
-            //校验的数据
-            el: testData.phone,
-            //校验的规则
-            rules: [
-                {rule: 'isNoNull', msg: '电话不能为空'},{rule:'isMobile,isEmail',msg:'电话格式错误'}
-            ]
-        },
-        {
-            //校验的数据
-            el: testData.name,
-            //校验的规则
-            rules: [
-                {rule: 'isNoNull', msg: '姓名不能为空'},{rule:'noChinese',msg:'格式错误'}
-            ]
-        }
-    ]).then(info => {
-        console.log(info)
-    }).catch(err => {
-        console.log(err)
-    });
-    //扩展-添加日期范围校验
-//    ecDo.validateForm.addRule('isDateRank', function (val, msg) {
-//        if (new Date(val[0]).getTime() >= new Date(val[1]).getTime()) {
-//            return msg;
-//        }
-//    });
-    //校验函数调用
-//    ecDo.validateForm.checkAll([
+//    ecDo.validateForm.check([
 //        {
 //            //校验的数据
 //            el: testData.phone,
-//            alias: 'mobile',
 //            //校验的规则
 //            rules: [
-//                {rule: 'isNoNull', msg: '电话不能为空'}, {rule: 'isMobile', msg: '手机号码格式不正确'}, {
-//                    rule: 'minLength:6',
-//                    msg: '手机号码不能少于6'
-//                }
+//                {rule: 'isNoNull', msg: '电话不能为空'},{rule:'isMobile,isEmail',msg:'电话格式错误'}
 //            ]
 //        },
 //        {
-//            el: testData.pw,
-//            alias: 'pwd',
+//            //校验的数据
+//            el: testData.name,
+//            //校验的规则
 //            rules: [
-//                {rule: 'isNoNull', msg: '密码不能为空'},
-//                {rule: 'minLength:6', msg: '密码长度不能小于6'}
+//                {rule: 'isNoNull', msg: '姓名不能为空'},{rule:'noChinese',msg:'格式错误'}
 //            ]
-//        },
-//        {
-//            el: ['2017-8-9 22:00:00', '2017-8-8 24:00:00'],
-//            rules: [{
-//                rule: 'isDateRank', msg: '日期范围不正确'
-//            }]
 //        }
 //    ]).then(info => {
 //        console.log(info)
 //    }).catch(err => {
 //        console.log(err)
 //    });
+    //扩展-添加日期范围校验
+    ecDo.validateForm.addRule('isDateRank', function (val, msg) {
+        if (new Date(val[0]).getTime() >= new Date(val[1]).getTime()) {
+            return msg;
+        }
+    });
+    //校验函数调用
+    ecDo.validateForm.checkAll([
+        {
+            //校验的数据
+            el: testData.phone,
+            alias: 'mobile',
+            //校验的规则
+            rules: [
+                {rule: 'isNoNull', msg: '电话不能为空'}, {rule: 'isMobile,isEmail', msg: '手机号码格式不正确'},
+            ]
+        },
+        {
+            el: testData.pw,
+            alias: 'pwd',
+            rules: [
+                {rule: 'isNoNull', msg: '密码不能为空'},
+                {rule: 'minLength:6', msg: '密码长度不能小于6'}
+            ]
+        },
+        {
+            el: ['2017-8-3 22:00:00', '2017-8-8 24:00:00'],
+            alias: 'date',
+            rules: [{
+                rule: 'isDateRank', msg: '日期范围不正确'
+            }]
+        }
+    ]).then(info => {
+        console.log(info)
+    }).catch(err => {
+        console.log(err)
+    });
 </script>
 </body>
 </html>
