--- a/example/ecVaildate.html
+++ b/example/ecVaildate.html
@@ -78,17 +78,17 @@
         <p class="u-tips success" v-if="demo3.tips==='success'">提交成功</p>
         <p><input type="button" class="u-btn-submit" value="提交" @click="handleSubmit3"></p>
     </div>
-
-    <!--<div class="m-from-box">-->
-        <!--<p><input type="text" class="u-input-text" placeholder="请输入姓名" v-model="demo4.userName"-->
-                  <!--:class="{'err':demo4.tips.userName}"></p>-->
-        <!--<p class="u-tips" v-if="demo4.tipsVal.userName">查找不到结果：{{demo4.tipsVal.userName.el}}</p>-->
-        <!--<p><input type="text" class="u-input-text" placeholder="请输入电话或者邮箱" v-model="demo4.userContact"-->
-                  <!--:class="{'err':demo4.tips.contact}"></p>-->
-        <!--<p class="u-tips" v-if="demo4.tipsVal.contact.msg">查找不到结果：{{demo4.tipsVal.contact.el}}</p>-->
-        <!--<p class="u-tips success" v-if="demo4.tips==='success'">提交成功</p>-->
-        <!--<p><input type="button" class="u-btn-submit" value="提交" @click="handleSubmit4"></p>-->
-    <!--</div>-->
+    <!--单个输入，实时校验-->
+    <div class="m-from-box">
+        <p><input type="text" class="u-input-text" placeholder="请输入姓名" v-model="demo4.userName"
+                  :class="{'err':demo4.tips.userName}"></p>
+        <p class="u-tips" v-if="demo4.tipsVal.userName">查找不到结果：{{demo4.tipsVal.userName.el}}</p>
+        <p><input type="text" class="u-input-text" placeholder="请输入电话或者邮箱" v-model="demo4.userContact"
+                  :class="{'err':demo4.tips.contact}"></p>
+        <p class="u-tips" v-if="demo4.tipsVal.contact.msg">查找不到结果：{{demo4.tipsVal.contact.el}}</p>
+        <p class="u-tips success" v-if="demo4.tips==='success'">提交成功</p>
+        <p><input type="button" class="u-btn-submit" value="提交" @click="handleSubmit4"></p>
+    </div>
 </div>
 
 </body>
