--- a/example/ecVaildate.html
+++ b/example/ecVaildate.html
@@ -89,6 +89,13 @@
         <p class="u-tips success" v-if="demo4.tips.contact==='success'">提交成功</p>
         <p><input type="button" class="u-btn-submit" value="提交" @click="handleSubmit4"></p>
     </div>
+    <!--单个输入，实时校验-密码强度-->
+    <div class="m-from-box">
+        <p><input type="text" class="u-input-text" placeholder="请输入电话或者邮箱" v-model="demo5.pwd"
+                  :class="{'err':demo5.tips}"  @blur="handleInput5"></p>
+        <p class="u-tips">{{demo5.tips}}</p>
+        <p class="u-tips success" v-if="demo4.tips.userContact==='success'">提交成功</p>
+    </div>
 </div>
 
 </body>
@@ -120,7 +127,10 @@
                     userName: '',
                     userContact: ''
                 },
-                tipsVal: {}
+            },
+            demo5: {
+                pwd:'',
+                tips: '',
             }
 
         },
@@ -250,6 +260,23 @@
                     this.demo4.tips.userContact = ''
                 }).catch(err => {
                     this.demo4.tips.userContact = err;
+                });
+            },
+            handleInput5(){
+                let _this = this;
+                ecVaildate.check([
+                    {
+                        //校验的数据
+                        el: _this.demo5.pwd,
+                        //校验的规则
+                        rules: [
+                            {rule: 'isNoNull', msg: '联系方式不能为空'}, {rule: 'isMobile,isEmail', msg: '请输入正确的联系方式'}
+                        ]
+                    },
+                ]).then(info => {
+                    this.demo5.tips = ''
+                }).catch(err => {
+                    this.demo5.tips = err;
                 });
             }
         }
