ecValidate 整合isType 可以判断数据类型

--- a/example/ecVaildate.html
+++ b/example/ecVaildate.html
@@ -137,7 +137,7 @@
         methods: {
             handleSubmit1(){
                 let _this = this;
-                ecVaildate.check([
+                ecValidate.check([
                     {
                         //校验的数据
                         el: _this.demo1.userName,
@@ -163,7 +163,7 @@
             handleSubmit2(){
                 let _this = this;
                 //在校验数组里面加上alias字段，保存错误信息。该字段要保证值唯一性，并且要么全部加上，要么全部不加，不然可能会造成页面错误
-                ecVaildate.check([
+                ecValidate.check([
                     {
                         //校验的数据
                         el: _this.demo2.userName,
@@ -193,7 +193,7 @@
             handleSubmit3(){
                 let _this = this;
                 //checkAll校验全部的函数，必须要加上alias字段。
-                ecVaildate.checkAll([
+                ecValidate.checkAll([
                     {
                         //校验的数据
                         el: _this.demo3.userName,
@@ -220,7 +220,7 @@
             },
             handleSubmit4(){
                 let _this = this;
-                ecVaildate.checkAll([
+                ecValidate.checkAll([
                     {
                         //校验的数据
                         el: _this.demo4.userName,
@@ -247,7 +247,7 @@
             },
             handleInput4(){
                 let _this = this;
-                ecVaildate.check([
+                ecValidate.check([
                     {
                         //校验的数据
                         el: _this.demo4.userContact,
@@ -264,7 +264,7 @@
             },
             handleInput5(){
                 let _this = this;
-                ecVaildate.check([
+                ecValidate.check([
                     {
                         //校验的数据
                         el: _this.demo5.pwd,
