isType 增加测试用例

--- a/example/isType.html
+++ b/example/isType.html
@@ -7,6 +7,7 @@
 <body>
 <script src="../src/ec-do-3.0.0-beta.1.js"></script>
 <script>
+    console.log(ecDo.isType([1,2,3,4,5,6]));
     console.log(ecDo.isType([1,2,3,4,5,6],'array'));
 </script>
 </body>
