--- a/example/ecValidate-beta.html
+++ b/example/ecValidate-beta.html
@@ -93,13 +93,13 @@
     <!--单个输入，实时校验-->
     <div class="m-from-box">
         <p><input type="text" class="u-input-text" placeholder="请输入电话或者邮箱" v-model="demo4.userContact"
-                  :class="{'err':demo4.tips.contact}"  @input="handleInput4"></p>
-        <p class="u-tips" v-if="demo4.tips.userContact!=='success'">{{demo4.tips.userContact}}</p>
-        <p class="u-tips success" v-else>提交成功</p>
+                  :class="{'err':demo4.tips&&demo4.tips!=='success'}"  @input="handleInput4"></p>
+        <p class="u-tips" v-if="demo4.tips!=='success'">{{demo4.tips}}</p>
+        <p class="u-tips success" v-else>输入成功</p>
     </div>
     <!--单个输入，实时校验-密码强度-->
     <div class="m-from-box">
-        <p><input type="text" class="u-input-text" placeholder="请输入电话或者邮箱" v-model="demo5.pwd"  @input="handleInput5"></p>
+        <p><input type="text" class="u-input-text" placeholder="请输入密码" v-model="demo5.pwd"  @input="handleInput5"></p>
         <p class="u-tips" :class="'lv'+demo5.tips" v-show="demo5.tips">密码强度：{{demo5.tips}}</p>
     </div>
 </div>
@@ -127,12 +127,8 @@
                 tips: {}
             },
             demo4: {
-                userName: '',
                 userContact: '',
-                tips: {
-                    userName: '',
-                    userContact: ''
-                },
+                tips:'',
             },
             demo5: {
                 pwd:'',
@@ -217,6 +213,7 @@
                         ]
                     }
                 ])
+                debugger;
                 if(_tips!=='success'){
                     this.demo3.tips = _tips;
                 }
@@ -224,15 +221,6 @@
             handleSubmit4(){
                 let _this = this;
                 let _tips=ecValidate.checkAll([
-                    {
-                        //校验的数据
-                        el: _this.demo4.userName,
-                        alias: 'userName',
-                        //校验的规则
-                        rules: [
-                            {rule: 'isNoNull', msg: '姓名不能为空'}
-                        ],
-                    },
                     {
                         //校验的数据
                         el: _this.demo4.userContact,
@@ -243,9 +231,7 @@
                         ]
                     }
                 ])
-                if(_tips!=='success'){
-                    this.demo4.tips = _tips;
-                }
+                this.demo4.tips = _tips;
             },
             handleInput4(){
                 let _this = this;
@@ -259,7 +245,7 @@
                         ]
                     },
                 ])
-                this.demo4.tips.userContact = _tips;
+                this.demo4.tips = _tips;
             },
             handleInput5(){
                 let _this = this;
