--- a/example/ecValidate.html
+++ b/example/ecValidate.html
@@ -93,18 +93,14 @@
     </div>
     <!--单个输入，实时校验-->
     <div class="m-from-box">
-        <p><input type="text" class="u-input-text" placeholder="请输入姓名" v-model="demo4.userName"
-                  :class="{'err':demo4.tips.userName}" @input="handleInput4"></p>
-        <p class="u-tips" v-if="demo4.tips.userName">{{demo4.tips.userName}}</p>
         <p><input type="text" class="u-input-text" placeholder="请输入电话或者邮箱" v-model="demo4.userContact"
-                  :class="{'err':demo4.tips.contact}"  @input="handleInput4"></p>
-        <p class="u-tips">{{demo4.tips.userContact}}</p>
-        <p class="u-tips success" v-if="demo4.tips.contact==='success'">提交成功</p>
-        <p><input type="button" class="u-btn-submit" value="提交" @click="handleSubmit4"></p>
+                  :class="{'err':demo4.tips&&demo4.tips!=='success'}"  @input="handleInput4"></p>
+        <p class="u-tips" v-if="demo4.tips!=='success'">{{demo4.tips}}</p>
+        <p class="u-tips success" v-else>输入成功</p>
     </div>
     <!--单个输入，实时校验-密码强度-->
     <div class="m-from-box">
-        <p><input type="text" class="u-input-text" placeholder="请输入电话或者邮箱" v-model="demo5.pwd"  @input="handleInput5"></p>
+        <p><input type="text" class="u-input-text" placeholder="请输入密码" v-model="demo5.pwd"  @input="handleInput5"></p>
         <p class="u-tips" :class="'lv'+demo5.tips" v-show="demo5.tips">密码强度：{{demo5.tips}}</p>
     </div>
 </div>
@@ -132,12 +128,8 @@
                 tips: {}
             },
             demo4: {
-                userName: '',
                 userContact: '',
-                tips: {
-                    userName: '',
-                    userContact: ''
-                },
+                tips:'',
             },
             demo5: {
                 pwd:'',
@@ -229,33 +221,6 @@
                     this.demo3.tips = err
                 });
             },
-            handleSubmit4(){
-                let _this = this;
-                ecValidate.checkAll([
-                    {
-                        //校验的数据
-                        el: _this.demo4.userName,
-                        alias: 'userName',
-                        //校验的规则
-                        rules: [
-                            {rule: 'isNoNull', msg: '姓名不能为空'}
-                        ],
-                    },
-                    {
-                        //校验的数据
-                        el: _this.demo4.userContact,
-                        alias: 'contact',
-                        //校验的规则
-                        rules: [
-                            {rule: 'isNoNull', msg: '联系方式不能为空'}, {rule: 'isMobile,isEmail', msg: '请输入正确的联系方式'}
-                        ]
-                    }
-                ]).then(info => {
-                    this.demo4.tips = info
-                }).catch(err => {
-                    this.demo4.tips = err;
-                });
-            },
             handleInput4(){
                 let _this = this;
                 ecValidate.check([
@@ -268,9 +233,9 @@
                         ]
                     },
                 ]).then(info => {
-                    this.demo4.tips.userContact = ''
+                    this.demo4.tips = info;
                 }).catch(err => {
-                    this.demo4.tips.userContact = err;
+                    this.demo4.tips = err;
                 });
             },
             handleInput5(){
