--- a/example/ecValidate-beta.html
+++ b/example/ecValidate-beta.html
@@ -108,15 +108,14 @@
 <script src="../src/vue.min.js"></script>
 <script src="../src/ec-validate-beta.js"></script>
 <script>
-
+    //检测数据类型
     let tips=ecValidate.check([
         {
-            el:[1,2,3,4,5],
+            el:'[1,2,3,4,5]',
             rules:[{rule:'isType:array',msg:'传进去的数组不是数组'}]
         }
-    ])
-
-    console.log(tips)
+    ]);
+    console.log(tips);
 
     new Vue({
         el: '#form-box',
